<resources>
    <string name="app_name">Juustosukka-EE</string>
    <string name="app_logo">app_logo</string>
    <string name="new_user">Luo uusi käyttäjä</string>
    <string name="new_user_underline"><u>Luo uusi käyttäjä</u></string>
    <string name="log_in">Kirjaudu sisään</string>
    <string name="back_icon">back_icon</string>
    <string name="password_hint">Salasana</string>
    <string name="useraname_hint">Käyttäjänimi</string>
    <string name="password_again_hint">Salasana uudestaan</string>
    <string name="create_account">Luo tili</string>
    <string name="username_pp">Käyttäjänimi</string>
    <string name="age_hint">Syötä ikä</string>
    <string name="home_town">Syötä asuinpaikka</string>
    <string name="start_weight">Aloituspaino (kg)</string>
    <string name="height">Pituus (cm)</string>
    <string name="log_out">Kirjaudu Ulos</string>
    <string name="profilepic"></string>
    <string name="hint_text1">Syötä kaupunki</string>
    <string name="button1_text">Etsi</string>
    <string name="temperatureText">°C</string>
    <string name="cityText">Kaupunki</string>
    <string name="weatherStatinText">Sääasema</string>
    <string name="save_button">Tallenna tiedot</string>
    <string name="save_weight">Tallenna paino</string>
    <string name="save_steps">Tallenna askeleet</string>
    <string name="weight_hint">Syötä paino</string>
    <string name="steps_hint">Syötä askeleet</string>
    <string name="Enter_height">Syötä pituus (cm)</string>
    <string name="Enter_weight">Syötä paino (kg)</string>
    <string name="Calculate_BMI">Laske painoindeksi</string>
    <string name="BMI_Result">BMI</string>
    <string name="refresh_chart">Päivitä taulukot</string>
    <string name="Profile">Profiili</string>
    <string name="Data">Data</string>
    <string name="Home">Koti</string>
</resources>