<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2D2F31"
    android:backgroundTint="@color/background_color"
    tools:context=".ProfilePage">

    <EditText
        android:id="@+id/home_town"
        android:layout_width="wrap_content"
        android:layout_height="78dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="23dp"
        android:layout_marginTop="340dp"
        android:layout_marginEnd="23dp"
        android:autofillHints=""
        android:background="#F1EAEA"
        android:backgroundTint="@color/yellow_700"
        android:gravity="center_horizontal|fill_vertical"
        android:hint="@string/home_town"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:itemBackground="@color/teal_700"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:menu="@menu/menu_navigation" />

    <TextView
        android:id="@+id/username_profilepage"
        android:layout_width="180dp"
        android:layout_height="77dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="200dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="23dp"
        android:background="#F1EAEA"
        android:backgroundTint="@color/yellow_700"
        android:gravity="center_horizontal|fill_vertical"
        android:text="@string/username_pp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/height"
        android:layout_width="180dp"
        android:layout_height="77dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="23dp"
        android:layout_marginTop="240dp"
        android:layout_marginEnd="24dp"
        android:layout_toEndOf="@+id/start_weight"
        android:autofillHints=""
        android:background="#F1EAEA"
        android:backgroundTint="@color/yellow_700"
        android:gravity="center|center_horizontal|fill_vertical"
        android:hint="@string/height"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/start_weight"
        android:layout_width="190dp"
        android:layout_height="77dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="23dp"
        android:layout_marginTop="240dp"
        android:autofillHints=""
        android:background="#F1EAEA"
        android:backgroundTint="@color/yellow_700"
        android:gravity="center_horizontal|fill_vertical"
        android:hint="@string/start_weight"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/age_pp"
        android:layout_width="180dp"
        android:layout_height="77dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="200dp"
        android:layout_marginTop="142dp"
        android:layout_marginEnd="23dp"
        android:background="#FFFFFF"
        android:backgroundTint="@color/yellow_700"
        android:gravity="center_horizontal|fill_vertical"
        android:hint="@string/age_hint"
        android:textAlignment="center"
        android:inputType="number"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="227dp"
        android:layout_height="130dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="31dp"
        android:layout_marginBottom="74dp"
        android:contentDescription="@string/app_logo"
        app:srcCompat="@drawable/teerveys_logo" />

    <ImageView
        android:id="@+id/profilepic"
        android:layout_width="173dp"
        android:layout_height="192dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/profilepic"
        app:srcCompat="@drawable/ic_baseline_person_24" />

    <Button
        android:id="@+id/logout_button"
        android:layout_width="133dp"
        android:layout_height="64dp"
        android:layout_below="@+id/home_town"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="32dp"
        android:background="@color/yellow_700"
        android:onClick="log_out"
        android:text="@string/log_out"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:backgroundTint="@color/teal_700" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="140dp"
        android:layout_height="64dp"
        android:layout_below="@+id/home_town"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="224dp"
        android:background="@color/yellow_700"
        android:onClick="save_info"
        android:text="@string/save_button"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:backgroundTint="@color/teal_700" />

    <ImageButton
        android:id="@+id/changepic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/profilepic"
        android:layout_alignTop="@+id/profilepic"
        android:layout_alignEnd="@+id/profilepic"
        android:layout_alignBottom="@+id/profilepic"
        android:layout_marginStart="124dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="-1dp"
        android:backgroundTint="#1EC3C3C3"
        app:srcCompat="@drawable/ic_baseline_edit_24" />

    <TextView
        android:id="@+id/ikatext"
        android:layout_width="189dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/age_pp"
        android:layout_alignTop="@+id/age_pp"
        android:layout_alignEnd="@+id/age_pp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:gravity="center"
        android:textColor="#00BCD4" />

    <TextView
        android:id="@+id/painotext"
        android:layout_width="187dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/start_weight"
        android:layout_alignTop="@+id/start_weight"
        android:layout_alignEnd="@+id/start_weight"
        android:layout_marginStart="1dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="2dp"
        android:gravity="center"
        android:textColor="#00BCD4" />

    <TextView
        android:id="@+id/pituustext"
        android:layout_width="152dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/height"
        android:layout_alignTop="@+id/height"
        android:layout_alignEnd="@+id/height"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:gravity="center"
        android:shadowColor="#FFFFFF"
        android:textColor="#00BCD4" />

    <TextView
        android:id="@+id/kaupunkitext"
        android:layout_width="367dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/home_town"
        android:layout_alignTop="@+id/home_town"
        android:layout_alignEnd="@+id/home_town"
        android:layout_marginStart="-1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="0dp"
        android:gravity="center"
        android:textColor="#00BCD4" />

</RelativeLayout>