<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2D2F31"
    android:backgroundTint="@color/background_color"
    tools:context=".DataPage">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:itemBackground="@color/teal_700"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/menu_navigation" >

    </com.google.android.material.bottomnavigation.BottomNavigationView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/searchLayout"
        android:layout_width="266dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toTopOf="@+id/navi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.23"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04000002">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cityInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_text1" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/searchCity"
        android:layout_width="74dp"
        android:layout_height="52dp"
        android:onClick="searchWeatherData"
        android:text="@string/button1_text"
        android:backgroundTint="@color/teal_700"
        app:layout_constraintBottom_toBottomOf="@+id/searchLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/searchLayout"
        app:layout_constraintTop_toTopOf="@+id/searchLayout"
        app:rippleColor="#6E3131" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/navi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchLayout"
        app:layout_constraintVertical_bias="0.027" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="392dp"
        android:layout_height="98dp"
        app:cardBackgroundColor="@color/background_color"
        app:layout_constraintBottom_toTopOf="@+id/navi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:layout_constraintVertical_bias="0.00999999">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/temperature"
                android:layout_width="106dp"
                android:layout_height="57dp"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/temperatureText"
                android:textColor="@color/teal_900"
                android:textSize="30sp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/userCity"
                android:layout_width="237dp"
                android:layout_height="57dp"
                android:gravity="center_vertical"
                android:text="@string/cityText"
                android:textColor="@color/teal_900"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/temperature"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.39" />

            <TextView
                android:id="@+id/weatherStation"
                android:layout_width="234dp"
                android:layout_height="21dp"
                android:text="@string/weatherStatinText"
                android:textColor="@color/teal_700"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/userCity"
                app:layout_constraintStart_toStartOf="@+id/userCity"
                app:layout_constraintTop_toBottomOf="@+id/userCity" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


    <EditText
        android:id="@+id/bmiweight"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:background="#F1EAEA"
        android:backgroundTint="@color/yellow_700"
        android:gravity="center_horizontal|fill_vertical"
        android:hint="@string/Enter_weight"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/bmiresult"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:background="#F1EAEA"
        android:backgroundTint="@color/yellow_700"
        android:gravity="center_horizontal|fill_vertical"
        android:text="@string/BMI_Result"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bmiweight" />

    <Button
        android:id="@+id/BMIButton"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:background="@color/yellow_700"
        android:onClick="CalculateBMI"
        android:text="@string/Calculate_BMI"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:backgroundTint="@color/teal_700"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bmiheight" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Painoindeksilaskuri"
        android:textColor="@color/teal_700"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2" />

    <EditText
        android:id="@+id/bmiheight"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:autofillHints=""
        android:background="#F1EAEA"
        android:backgroundTint="@color/yellow_700"
        android:gravity="center_horizontal|fill_vertical"
        android:hint="@string/Enter_height"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/bmitext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bmiresult" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/navi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:fontFamily="sans-serif-medium"
        android:text="Syöttöhistoria"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:backgroundTint="#00FFFFFF"
        android:onClick="refresh"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/divider2"
        app:srcCompat="@drawable/ic_baseline_refresh_24" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bmitext" />

</androidx.constraintlayout.widget.ConstraintLayout>