<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F0E4"
    android:backgroundTint="#F5F0E4"
    tools:context=".LogInPage">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="197dp"
        android:layout_marginStart="36.5dp"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="36.5dp"
        android:contentDescription="@string/app_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/teerveys_logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout4"
        android:layout_width="308dp"
        android:layout_height="66dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:background="@color/yellow_200"
        android:backgroundTint="@color/yellow_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.676">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwd"
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:backgroundTint="@color/yellow_200"
            android:gravity="center_horizontal"
            android:hint="@string/password_hint"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="73dp"
            tools:layout_editor_absoluteY="577dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="308dp"
        android:layout_height="66dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:background="@color/yellow_700"
        android:backgroundTint="@color/yellow_700"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView1"
        tools:ignore="NotSibling">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/yellow_700"
            android:gravity="center_horizontal"
            android:hint="@string/useraname_hint"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/logIn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="161dp"
        android:layout_height="53dp"
        android:layout_marginBottom="156dp"
        android:onClick="logIn"
        android:text="@string/log_in"
        app:backgroundTint="@color/teal_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwd"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="NotSibling" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/log_in"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <TextView
        android:id="@+id/createNewUserTxt"
        android:layout_width="wrap_content"
        android:layout_height="29dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="130dp"
        android:layout_marginBottom="100dp"
        android:onClick="openNewUser"
        android:text="Luo uusi käyttäjä"
        android:textColor="#2D2F31"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logIn"
        app:layout_constraintVertical_bias="0.25" />


</androidx.constraintlayout.widget.ConstraintLayout>